Consolidated attestation exceptions